add logger, add method findById